fix: some styles

--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
         <div class="header__logo">
           <a class="header__logo-link" href="/">
             <img src="./assets/img/laurel.png" alt="Логотип магазина Греческий домик">
-            <p class="header__logo-text">Греческий&nbsp;Домик</p>
+            <p class="header__logo-text">Greek&nbsp;house</p>
           </a>
         </div>
         <nav class="header__navigation navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a href="#oil" class="navigation__link">Оливковое масло</a>
+              <a href="#oil" class="navigation__link">Olive oil</a>
             </li>
             
             <li class="navigation__item">
-              <a href="#olives" class="navigation__link">Оливки</a>
+              <a href="#olives" class="navigation__link">Olives</a>
             </li>
             <li class="navigation__item">
-              <a href="#goods" class="navigation__link">Бакалея</a>
+              <a href="#goods" class="navigation__link">Grocery</a>
             </li>
             <li class="navigation__item">
-              <a href="#bread" class="navigation__link">Свежая выпечка</a>
+              <a href="#bread" class="navigation__link">fresh bakery</a>
             </li>
           </ul>
         </nav>
