fix: header__link styles

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
         <nav class="header__navigation navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a href="#oil" class="navigation__link">Olive oil</a>
+              <a href="#oil" class="navigation__link">Оливковое масло</a>
             </li>
             
             <li class="navigation__item">
-              <a href="#olives" class="navigation__link">Olives</a>
+              <a href="#olives" class="navigation__link">Оливки</a>
             </li>
             <li class="navigation__item">
-              <a href="#goods" class="navigation__link">Grocery</a>
+              <a href="#goods" class="navigation__link">Бакалея</a>
             </li>
             <li class="navigation__item">
-              <a href="#bread" class="navigation__link">fresh bakery</a>
+              <a href="#bread" class="navigation__link">Свежая выпечка</a>
             </li>
           </ul>
         </nav>
