fix: header__logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="header__logo">
           <a class="header__logo-link" href="/">
             <img src="./assets/img/laurel.png" alt="Логотип магазина Греческий домик">
-            <p class="header__logo-text">Greek&nbsp;house</p>
+            <p class="header__logo-text">Greek&nbsp;House</p>
           </a>
         </div>
         <nav class="header__navigation navigation">
