fix: product__title

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="container product__container">
           <img class="product__photo" src="assets/img/pixabay.jpg" alt="Бакалея, специи и соусы" />
           <div class="product__content">
-            <h2 class="product__title">Бакалея, специи и соусы</h2>
+            <h2 class="product__title">Бакалея</h2>
             <p class="product__description">
                 
             </p>
