--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="https://api-maps.yandex.ru/2.1/?apikey=34de5506-d7fc-42ce-bcb3-db8c3586696e&lang=ru_RU" type="text/javascript">
-    </script>
+    <!-- <script defer src="https://api-maps.yandex.ru/2.1/?apikey=34de5506-d7fc-42ce-bcb3-db8c3586696e&lang=ru_RU" type="text/javascript">
+    </script> -->
     <script defer src="js/script.js"></script>
     <link rel="icon" type="image/png" sizes="16X16" href="assets/img/laurel.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
   <header class="header" id="header">
       <div class="container header__container">
         <div class="header__logo">
-          <a class="header__logo-link" href="/">
+          <a class="header__logo-link" href="#">
             <img src="./assets/img/laurel.png" alt="Логотип магазина Греческий домик">
             <p class="header__logo-text">Greek&nbsp;House</p>
           </a>
