--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <script defer src="https://api-maps.yandex.ru/2.1/?apikey=34de5506-d7fc-42ce-bcb3-db8c3586696e&lang=ru_RU" type="text/javascript">
-    </script> -->
-    <script defer src="js/script.js"></script>
     <link rel="icon" type="image/png" sizes="16X16" href="assets/img/laurel.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Blaka&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
+    <script defer src="https://api-maps.yandex.ru/2.1/?apikey=34de5506-d7fc-42ce-bcb3-db8c3586696e&lang=ru_RU" type="text/javascript">
+    </script>
+    <script defer src="js/script.js"></script>
     <title>Греческий домик | Магазин Средиземноморских продуктов и деликатесов</title>
   </head>
   <body>
